--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: eirimiciuc@gmail.com</p>
+            <p>Email: ethanirimiciuc@gmail.com</p>
             <p>Phone: 773-663-7100</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/ethan-irimiciuc-557bab202" target="_blank">linkedin.com/in/ethan-irimiciuc-557bab202</a></p>
             <p>GitHub: <a href="https://github.com/ethanir" target="_blank">github.com/ethanir</a></p>
